# cronboard

./: .SRCINFO  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PKGBUILD  README.html  README.md  flake.nix  project_explanation.md  pyproject.toml  zensical.toml
.github/: pull_request_template.md
.github/workflows/: docs.yml  merge-to-main.yml  mirror-repository.yml  no-autopilot.yml  publish_to_AUR.yml  release.yml  tests.yml  update-flake-lock.yml
docs/: configuration.md  getting-started.md  index.md  installation.md  keyboard-shortcuts.md
docs/features/: local-cron.md  remote-servers.md  search.md
docs/images/: README.md
docs/javascripts/: docs-link.js  install-tabs.js
docs/stylesheets/: catppuccin.css  home.css
overrides/: home.html
overrides/partials/: logo.html
src/: app.py
src/CronBoard/: app.py
src/cronboard/: app.py  config.py
src/cronboard/logging/: cron-wrapper.sh
src/cronboard_encryption/: CronEncrypt.py
src/cronboard_widgets/: CronCommand.py  CronCreator.py  CronDeleteConfirmation.py  CronHostKeyChanged.py  CronHostKeyConfirm.py  CronInputSearch.py  CronSSHModal.py  CronServers.py  CronTable.py  CronTabs.py  VimKeysRadioSet.py
src/test/: CronCreator_test.py  CronDeleteConfirmation_test.py  CronInputSearch_test.py  CronSSHModal_test.py  app_test.py  conftest.py  cronboard_test.py
src/widgets/: CronCreate.py  CronCreator.py  CronDeleteConfirmation.py  CronSSHModal.py  CronTabs.py  Crontable.py
tests/: CronCommand_test.py  CronCreator_test.py  CronDeleteConfirmation_test.py  CronEncrypt_test.py  CronInputSearch_test.py  CronSSHModal_test.py  CronServers_test.py  CronTable_test.py  LogView_test.py  VimKeysRadioSet_test.py  app_test.py  conftest.py  cron_wrapper_test.py  logger_test.py
(+13 files in other folders)
